Flowmini/flowmini_v23_token_tree_parser_bridge/examples/fail/bad_record_field_type.flow
program bad_record_field_type

type Point {
    field x : int
    field y : int
}

type Box {
    field p : Point
}

main {
    box : Box({p:10})
    print 1
}
